Fix `cljfmt` step: call `check`, not `fix`

--- a/.github/workflows/clojure-pr-check.yaml
+++ b/.github/workflows/clojure-pr-check.yaml
@@ -45,7 +45,7 @@ jobs:
         run: clojure -P
 
       - name: Run cljfmt
-        run: cljfmt fix
+        run: cljfmt check
 
       - name: Run clj-kondo (benchmarks)
         run: clj-kondo --lint benchmarks
